--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">ckl8-250-Project</string>
     <string name="animation_duration">Duration: %1$d ms</string>
-    <string name="add_task_title"> Please Add A New Pose </string>
-    <string name="task_list_title"> Task Pose </string>
+    <string name="add_task_title"> Please Add A New Picture </string>
+    <string name="task_list_title"> TaiChi Movement Picture </string>
     <string name="action_settings">Settings</string>
     <string name="action_add">Add</string>
     <string name="action_delete">Delete</string>
